--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@trongnd/ts-nodemon": "^1.0.3",
     "@types/dotenv": "^6.1.0",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/request": "^2.48.1",
     "@types/request-promise": "^4.1.42",
     "ts-node": "^5.0.1",
@@ -12,6 +13,7 @@
   },
   "dependencies": {
     "dotenv": "^6.2.0",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.1.10",
     "request": "^2.88.0",
     "request-promise": "^4.2.2",
@@ -19,6 +21,7 @@
   },
   "scripts": {
     "nodemon": "ts-nodemon --exec 'yarn start'",
+    "test": "ts-node  src/tools/jwt.ts",
     "start": "ts-node src/index.ts"
   }
 }
