--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
-PORT= 3000
-SMS_KEY= http://sajadweb.ir
-APP_SECRET= iOjE1NiOjE1NDY4MTQyNDR9.R7FGFcN
+FRONTEND_URL="http://localhost:7777"
+PRISMA_ENDPOINT=""
+PRISMA_SECRET="omgplzdonttellanyone"
+APP_SECRET="jwtsecret123"
+STRIPE_SECRET="sk_123youchanget his"
+PORT=4444
