--- a/package.json
+++ b/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "backend",
-  "version": "0.0.1",
-  "description": "Awesome project developed with Vesper framework.",
-  "devDependencies": {
-    "@trongnd/ts-nodemon": "^1.0.3",
-    "@types/dotenv": "^6.1.0",
-    "@types/jsonwebtoken": "^8.3.0",
-    "@types/request": "^2.48.1",
-    "@types/request-promise": "^4.1.42",
-    "ts-node": "^5.0.1",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^2.7.2"
+  "name": "hello-world",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node-dev src/index.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "dotenv": "^6.2.0",
-    "jsonwebtoken": "^8.4.0",
-    "mongodb": "^3.1.10",
-    "request": "^2.88.0",
-    "request-promise": "^4.2.2",
-    "vesper": "0.1.9"
+    "graphql": "^14.1.1",
+    "graphql-cli": "^3.0.4",
+    "graphql-yoga": "^1.17.0",
+    "mongoose": "^5.4.4",
+    "reflect-metadata": "^0.1.13",
+    "typegoose": "^5.4.1"
   },
-  "scripts": {
-    "nodemon": "ts-nodemon --exec 'yarn start'",
-    "test": "ts-node  src/tools/jwt.ts",
-    "watch": "ts-node-dev src/index.ts",
-    "start": "ts-node src/index.ts"
+  "devDependencies": {
+    "@types/dotenv": "^6.1.0",
+    "@types/graphql": "^14.0.5",
+    "@types/mongoose": "^5.3.7",
+    "ts-node": "^7.0.1",
+    "ts-node-dev": "^1.0.0-pre.32",
+    "typescript": "^3.2.2"
   }
 }
