--- a/package.json
+++ b/package.json
@@ -15,14 +15,18 @@
     "graphql": "^14.1.1",
     "graphql-cli": "^3.0.4",
     "graphql-yoga": "^1.17.0",
+    "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.4",
     "reflect-metadata": "^0.1.13",
+    "request-promise": "^4.2.2",
     "typegoose": "^5.4.1"
   },
   "devDependencies": {
     "@types/dotenv": "^6.1.0",
     "@types/graphql": "^14.0.5",
+    "@types/jsonwebtoken": "^8.3.0",
     "@types/mongoose": "^5.3.7",
+    "@types/request-promise": "^4.1.42",
     "ts-node": "^7.0.1",
     "ts-node-dev": "^1.0.0-pre.32",
     "typescript": "^3.2.2"
